@@ -159,6 +159,8 @@ typedef struct
 {
   bool bAutoInsertDiskB;
   bool FastFloppy;			/* true to speed up FDC emulation */
+  bool EnableDriveA;
+  bool EnableDriveB;
   WRITEPROTECTION nWriteProtection;
   char szDiskZipPath[MAX_FLOPPYDRIVES][FILENAME_MAX];
   char szDiskFileName[MAX_FLOPPYDRIVES][FILENAME_MAX];
